biocomplexity/templates/osrm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osrm-deployment
  namespace: biocomplexity
  labels:
    app: osrm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: osrm
  template:
    metadata:
      labels:
        app: osrm
    spec:
      containers:
      - name: osrm-container
        image: osrm/osrm-backend
        ports:
        - containerPort: 5000    
        resources:
          requests:
            memory: "2024Mi"
            cpu: "50m"
          limits:
            memory: "3024Mi"
            cpu: "100m"
